--- a/Documents/Формы отчетов/Отчеты ДГ-20 (2 листа).htm
+++ b/Documents/Формы отчетов/Отчеты ДГ-20 (2 листа).htm
@@ -51,11 +51,9 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0
- style='border-collapse:collapse;border:none'>
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
  <tr style='height:566.35pt'>
-  <td width=525 valign=top style='width:406.5pt;border:none;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt;height:566.35pt'>
+  <td width=525 valign=top style='width:406.5pt;border:none;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:566.35pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span style='font-family:"Times New Roman",serif'>оюн
   ╚юпяекнплхррюк йпхбни пнц╩</span></b><span style='font-family:"Times New Roman",serif'>════════════════════════════════════════
