--- a/Documents/Формы отчетов/Отчеты ДГ-20 (2 листа).htm
+++ b/Documents/Формы отчетов/Отчеты ДГ-20 (2 листа).htm
@@ -55,135 +55,80 @@ div.WordSection1
  <tr style='height:566.35pt'>
   <td width=525 valign=top style='width:406.5pt;border:none;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:566.35pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-family:"Times New Roman",serif'>ПАО
-  «АРСЕЛОРМИТТАЛ КРИВОЙ РОГ»</span></b><span style='font-family:"Times New Roman",serif'>                                        
+  normal'><b><span style='font-family:"Times New Roman",serif'>ПАО «АРСЕЛОРМИТТАЛ КРИВОЙ РОГ»</span></b><span style='font-family:"Times New Roman",serif'>                                        
   <i>Форма ДГ-20</i></span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>                                                                                     <b>НАКЛАДНАЯ ПРЕДПРИЯТИЯ</b></span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>                                                     НАКЛАДНАЯ № _______</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>                                              Ведомость прибытия груза № _____</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:  normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>Заадресовка груза:</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>Дата:     ________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>                                                                                   
-  <b>НАКЛАДНАЯ ПРЕДПРИЯТИЯ</b></span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>                                                 
-    НАКЛАДНАЯ № _______</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>                                            
-  Ведомость прибытия груза № _____</span></p>
+  normal'><span style='font-family:"Times New Roman",serif'>Ф.И.О.  ________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>Заадресовка груза:</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>Дата:   
-  ________________</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>Ф.И.О.
-  ________________</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-family:"Times New Roman",serif'>Станция
-  назначения</span></b><span style='font-family:"Times New Roman",serif'>
-  _______________________________</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-family:"Times New Roman",serif'>Место выгрузки
-  (цех-получатель)</span></b><span style='font-family:"Times New Roman",serif'>
-  ___________________</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><b><span style='font-family:"Times New Roman",serif'>Станция назначения</span></b><span style='font-family:"Times New Roman",serif'>_______________________________</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><b><span style='font-family:"Times New Roman",serif'>Место выгрузки (цех-получатель)</span></b><span style='font-family:"Times New Roman",serif'>___________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span style='font-family:"Times New Roman",serif'>Род груза</span></b><span
   style='font-family:"Times New Roman",serif'>
   _________________________________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-family:"Times New Roman",serif'>Станция
-  отправления</span></b><span style='font-family:"Times New Roman",serif'>
+  normal'><b><span style='font-family:"Times New Roman",serif'>Станция отправления</span></b><span style='font-family:"Times New Roman",serif'>
   ______________________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span style='font-family:"Times New Roman",serif'>Отправитель</span></b><span
   style='font-family:"Times New Roman",serif'> ______________________________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><b><span style='font-family:"Times New Roman",serif'>Примечание</span></b><span
-  style='font-family:"Times New Roman",serif'>
-  _______________________________________</span></p>
+  normal'><b><span style='font-family:"Times New Roman",serif'>Примечание</span></b><span  style='font-family:"Times New Roman",serif'>  _______________________________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span style='font-family:"Times New Roman",serif'>___________________________________________________</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-  <table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width=0
-   style='width:375.65pt;border-collapse:collapse;border:none'>
+  <table class=MsoNormalTable border=1 cellspacing=0 cellpadding=0 width=0 style='width:375.65pt;border-collapse:collapse;border:none'>
    <tr style='height:25.45pt'>
-    <td width=29 rowspan=2 style='width:21.3pt;border:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center;text-indent:.4pt'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№
-    п/п</span></p>
+    <td width=29 rowspan=2 style='width:21.3pt;border:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+	<p class=MsoNormal align=center style='text-align:center;text-indent:.4pt'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№ п/п</span></p>
+	</td>
+    <td width=46 rowspan=2 style='width:33.05pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№ вагона</span></p>
     </td>
-    <td width=46 rowspan=2 style='width:33.05pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№
-    вагона</span></p>
+    <td width=65 rowspan=2 style='width:40.15pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№ ж.д. накладной</span></p>
     </td>
-    <td width=65 rowspan=2 style='width:40.15pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>№
-    ж.д. накладной</span></p>
+    <td width=74 rowspan=2 style='width:40.15pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+	<p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Сертификат. данные</span></p>
     </td>
-    <td width=74 rowspan=2 style='width:40.15pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Сертификат.
-    данные</span></p>
+	
+    <td width=106 colspan=2 style='width:80.3pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Вес нетто, тн</span></p>
     </td>
-    <td width=106 colspan=2 style='width:80.3pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Вес
-    нетто, тн</span></p>
+	
+    <td width=90 colspan=2 style='width:80.35pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Начало грузовых операций</span></p>
     </td>
-    <td width=90 colspan=2 style='width:80.35pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Начало
-    грузовых операций</span></p>
-    </td>
-    <td width=90 colspan=2 style='width:80.35pt;border:solid windowtext 1.0pt;
-    border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Окончание
-    грузовых операций</span></p>
+	
+    <td width=90 colspan=2 style='width:80.35pt;border:solid windowtext 1.0pt;border-left:none;padding:0cm 5.4pt 0cm 5.4pt;height:25.45pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Окончание грузовых операций</span></p>
     </td>
    </tr>
    <tr style='height:40.4pt'>
-    <td width=44 style='width:40.15pt;border-top:none;border-left:none;
-    border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>По
-    ж.д. накл.</span></p>
+    <td width=44 style='width:40.15pt;border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>По ж.д. накл.</span></p>
     </td>
-    <td width=62 style='width:40.15pt;border-top:none;border-left:none;
-    border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>После
-    перевески</span></p>
+    <td width=62 style='width:40.15pt;border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>После перевески</span></p>
     </td>
-    <td width=42 style='width:40.2pt;border-top:none;border-left:none;
-    border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Дата</span></p>
+	
+    <td width=42 style='width:40.2pt;border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Дата</span></p>
     </td>
-    <td width=47 style='width:40.15pt;border-top:none;border-left:none;
-    border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Время</span></p>
+	
+    <td width=47 style='width:40.15pt;border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Время</span></p>
     </td>
-    <td width=42 style='width:40.15pt;border-top:none;border-left:none;
-    border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-    padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
+    <td width=42 style='width:40.15pt;border-top:none;border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt;height:40.4pt'>
     <p class=MsoNormal align=center style='text-align:center'><span
     style='font-size:8.0pt;line-height:107%;font-family:"Times New Roman",serif'>Дата</span></p>
     </td>
@@ -195,10 +140,8 @@ div.WordSection1
     </td>
    </tr>
    <tr style='height:14.35pt'>
-    <td width=29 valign=top style='width:21.3pt;border:solid windowtext 1.0pt;
-    border-top:none;padding:0cm 5.4pt 0cm 5.4pt;height:14.35pt'>
-    <p class=MsoNormal align=center style='text-align:center'><span
-    style='font-size:10.0pt;line-height:107%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+    <td width=29 valign=top style='width:21.3pt;border:solid windowtext 1.0pt;border-top:none;padding:0cm 5.4pt 0cm 5.4pt;height:14.35pt'>
+    <p class=MsoNormal align=center style='text-align:center'><span style='font-size:10.0pt;line-height:107%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
     </td>
     <td width=46 valign=top style='width:33.05pt;border-top:none;border-left:
     none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -260,18 +203,10 @@ div.WordSection1
   normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>Приемосдатчик груза
-  и багажа ____________________   ____________________</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>                                                           
-  (подпись)                                 (Ф.И.О.)</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>Грузополучатель                        
-  _____________________   ____________________</span></p>
-  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span style='font-family:"Times New Roman",serif'>                                                            
-  (подпись)                                (Ф.И.О.)</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>Приемосдатчик груза и багажа ____________________   ____________________</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>                                 (подпись)                                 (Ф.И.О.)</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>Грузополучатель              _____________________   ____________________</span></p>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:normal'><span style='font-family:"Times New Roman",serif'>                                                            (подпись)                                (Ф.И.О.)</span></p>
   </td>
   <td width=183 valign=top style='width:406.5pt;border:none;padding:0cm 5.4pt 0cm 5.4pt;
   height:566.35pt'>
